Добавлена машина логического вывода

--- a/LogicalIntMachine.Net/LogicalInterMachine/LogicalInterMachine.csproj
+++ b/LogicalIntMachine.Net/LogicalInterMachine/LogicalInterMachine.csproj
@@ -53,6 +53,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="InterfaceMachine\InferenceMachine.cs" />
+    <Compile Include="InterfaceMachine\UserAnswer.cs" />
     <Compile Include="KnowledgeBaseFolder\Base\Container.cs" />
     <Compile Include="KnowledgeBaseFolder\KnowledgeBase.cs" />
     <Compile Include="KnowledgeBaseFolder\Base\Answer.cs" />
