--- a/Lab_4/Vibori/Vibori/Vibori.csproj
+++ b/Lab_4/Vibori/Vibori/Vibori.csproj
@@ -48,6 +48,7 @@
     <Compile Include="ConstituencyPriorites.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SimpsonRule.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
