--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /Lab_4/Vibori/.vs/Vibori/v15/Server/sqlite3
+/lab_3/.vs/SemNet/v15/Server/sqlite3
